# desktop

./: nteract-repl.ts.wip
.codex/skills/nteract-notebook-sync/: SKILL.md
.codex/skills/nteract-notebook-sync/references/: sync-task-resilience.md
apps/notebook-cloud/: README.md
crates/notebook-cloud-transport/src/: lib.rs
crates/runt-mcp/src/: daemon_watch.rs  health.rs
crates/runt/src/: workstation_cli.rs
crates/runtimed-node/: Cargo.toml
crates/runtimed-node/src/: lib.rs  parquet.rs
crates/runtimed/src/: runtime_agent.rs
crates/runtimed/src/requests/: interrupt_execution.rs
crates/runtimed/src/workstation/: agent_loop.rs
docs/handoffs/: 16-decisions-log.md
